--- a/gglan.cfg
+++ b/gglan.cfg
@@ -86,12 +86,11 @@ ammo_grenade_limit_flashbang						2
 ammo_grenade_limit_total							4
 //
 mp_weapons_allow_map_placed							1
-mp_weapons_glow_on_ground							0
 mp_display_kill_assists								1
 mp_respawn_on_death_t								0
 mp_respawn_on_death_ct								0
 mp_ct_default_melee									weapon_knife
-mp_ct_default_secondary								weapon_hkp2000
+mp_ct_default_secondary								weapon_usp_silencer
 mp_ct_default_primary								""
 mp_t_default_melee									weapon_knife
 mp_t_default_secondary								weapon_glock
@@ -102,13 +101,11 @@ mp_default_team_winner_no_objective					-1		// 2 == CTs, 3 == Ts
 
 spec_replay_enable								0
 
-sv_gameinstructor_enable							0
 mp_promoted_item_enabled			0
 sv_minimum_desired_chicken_count					0
 
 // This is executed after all gamemode_competitive and gamemode_competitive_server settings
 // have already been applied (but before gamemode_tournament[*] settings are applied)
-sv_qmm_abort_match_missing_player 0
 mp_freezetime				20
 sv_vote_command_delay		0
 
@@ -123,8 +120,6 @@ mp_team_timeout_ot_add_once 1
 mp_team_timeout_ot_add_each 1
 mp_team_timeout_ot_max		1
 		
-// Disable any holiday cheer going on at tournament times
-sv_holiday_mode				0
 mp_promoted_item_enabled			0
 
 
@@ -134,13 +129,10 @@ tv_enable                                              1
 tv_dispatchmode                                        0
 
 
-sv_maxusrcmdprocessticks                               3    
-sv_max_dropped_packets_to_process                      3
 sv_steamauth_enforce                                   
 
 mp_autokick                                            0
 sv_matchend_drops_enabled 0
-sv_damage_print_enable                                 2
 
 //IF we want to go pro one day, google this
 sv_reliableavatardata								   0
@@ -169,10 +161,6 @@ sv_vote_issue_loadbackup_spec_authoritative            1
 sv_vote_creation_timer                                 25
 sv_vote_failure_timer                                  25
 
-//A demander ---> Anticheat --> WallHack
-sv_occlude_players                                     0
-sv_force_transmit_players                              1
-sv_force_transmit_ents                                 1
 
 
 cash_team_bonus_shorthanded                            0
@@ -185,13 +173,9 @@ mp_logmoney                                            2
 sv_gameinstructor_disable                              1
 
 //SET BY ME
-mp_disconnect_kills_players 1
-sv_dc_friends_reqd 1
 sv_maxrate 0
 
 sv_pausable 
-mp_do_warmup_period 1
-sv_allow_wait_command 0
 sv_pure_kick_clients 1
 sv_pure_trace 0
 sv_steamgroup_exclusive 0
