--- a/gglan.cfg
+++ b/gglan.cfg
@@ -175,7 +175,7 @@ sv_gameinstructor_disable                              1
 //SET BY ME
 sv_maxrate 0
 
-sv_pausable 
+sv_pausable 						1
 sv_pure_kick_clients 1
 sv_pure_trace 0
 sv_steamgroup_exclusive 0
