--- a/gglan.cfg
+++ b/gglan.cfg
@@ -1,186 +1,74 @@
-bot_autodifficulty_threshold_high					0.0	// Value between -20.0 and 20.0 (Amount above avg human contribution score, above which a bot should lower its difficulty)
-bot_autodifficulty_threshold_low					-2.0	// Value between -20.0 and 20.0 (Amount below avg human contribution score, below which a bot should raise its difficulty)
-bot_chatter											normal
-bot_defer_to_human_goals							1
-bot_defer_to_human_items							1
-bot_difficulty										2
-bot_quota											1
-bot_quota_mode										competitive
-cash_player_bomb_defused							300
-cash_player_bomb_planted							300
-cash_player_damage_hostage							-30
-cash_player_interact_with_hostage					300
-cash_player_killed_enemy_default					300
-cash_player_killed_enemy_factor						1
-cash_player_killed_hostage							-1000
-cash_player_killed_teammate							-300
-cash_player_rescued_hostage							1000
-cash_team_elimination_bomb_map						3250
-cash_team_elimination_hostage_map_t					3000
-cash_team_elimination_hostage_map_ct					3000
-cash_team_hostage_alive								0
-cash_team_hostage_interaction						600
-cash_team_loser_bonus								1400
-cash_team_bonus_shorthanded							1000
-mp_starting_losses									1
-cash_team_loser_bonus_consecutive_rounds			500
-cash_team_planted_bomb_but_defused					600
-cash_team_rescued_hostage						600
-cash_team_terrorist_win_bomb						3500
-cash_team_win_by_defusing_bomb						3500
-cash_team_win_by_hostage_rescue						2900
-cash_team_win_by_time_running_out_hostage			3250
-cash_team_win_by_time_running_out_bomb				3250
-contributionscore_kill_reqs							1			// all about pew-pew and bullets
-contributionscore_assist_reqs						1			// all about pew-pew and bullets
-ff_damage_reduction_bullets							0.33
-ff_damage_reduction_grenade							0.85
-ff_damage_reduction_grenade_self					1
-ff_damage_reduction_other							0.4
-mp_afterroundmoney									0
-mp_buytime											20
-mp_buy_anywhere										0
-mp_buy_during_immunity								0
-mp_death_drop_defuser								1	
-mp_death_drop_grenade								2			// 0=none, 1=best, 2=current or best
-mp_death_drop_gun									1			// 0=none, 1=best, 2=current or best
-mp_fists_replace_melee								1
-mp_defuser_allocation								0
-mp_force_pick_time									15
-mp_forcecamera										1			// Set to 1 for team only spectating.
-mp_free_armor										0		
-mp_freezetime										15
-mp_friendlyfire										1
-mp_win_panel_display_time							3
-mp_respawn_immunitytime							-1 // disabling immunity in warmup too for 1v1 fights
-mp_halftime											1
-mp_match_can_clinch									1			// 0=No mercy rule, 1=team can clinch match win early if they win > 1/2 total rounds
-mp_maxmoney											16000
-mp_maxrounds										24
-//mp_molotovusedelay									0
-mp_playercashawards									1
-mp_roundtime										1.92
-mp_roundtime_hostage								1.92
-mp_roundtime_defuse									1.92
-mp_solid_teammates									1
-mp_startmoney										800
-mp_teamcashawards									1
-mp_timelimit										0
-mp_technical_timeout_per_team						1
-mp_technical_timeout_duration_s						120
-mp_weapons_allow_zeus								5
-//spec_freeze_panel_extended_time						0
-spec_freeze_time									2.0
-sv_allow_votes										1		// Voting allowed in this mode
-sv_talk_enemy_living								0
-sv_talk_enemy_dead									0		
-sv_auto_full_alltalk_during_warmup_half_end			0
-sv_deadtalk											1
-sv_ignoregrenaderadio								0
-sv_grenade_trajectory_time_spectator				4
-tv_delay											105
-mp_randomspawn										0
-mp_randomspawn_los									0
-sv_infinite_ammo									0
-ammo_grenade_limit_flashbang						2
-ammo_grenade_limit_total							4
-//
-mp_weapons_allow_map_placed							1
-mp_display_kill_assists								1
-mp_respawn_on_death_t								0
-mp_respawn_on_death_ct								0
-mp_ct_default_melee									weapon_knife
-mp_ct_default_secondary								weapon_usp_silencer
-mp_ct_default_primary								""
-mp_t_default_melee									weapon_knife
-mp_t_default_secondary								weapon_glock
-mp_t_default_primary								""
-mp_default_team_winner_no_objective					-1		// 2 == CTs, 3 == Ts
+// ===== GGLan — CS2 LAN soft preset (final) =====
 
-//occlusion_test_async								0
+// -----------------------------------------------------------------------------
+// 0) Base "Premier" (rulebook Valve) + cadence LAN
+// -----------------------------------------------------------------------------
+exec gamemode_competitive                 // Base compétitive (MR12, économie, etc.)
+mp_freezetime 15                          // 15 s de freeze (choix LAN ; Premier Valve = 20 s)
+sv_vote_command_delay 0                   // Pas de délai avant l’exécution d’un vote
+mp_promoted_item_enabled 0                // Désactive l’affichage d’items promotionnels
 
-spec_replay_enable								0
+// -----------------------------------------------------------------------------
+// 1) Overrides LAN utiles (offline-friendly & confort tournoi)
+// -----------------------------------------------------------------------------
 
-mp_promoted_item_enabled			0
-sv_minimum_desired_chicken_count					0
+// --- Auth / tolérance offline ---
+sv_steamauth_enforce 0                    // Permet de jouer sans Internet (LAN/offline)
+mp_autokick 0                             // Désactive le kick automatique des AFK
+sv_matchend_drops_enabled 0               // Pas de drops de fin de match (inutile en LAN)
 
-// This is executed after all gamemode_competitive and gamemode_competitive_server settings
-// have already been applied (but before gamemode_tournament[*] settings are applied)
-mp_freezetime				20
-sv_vote_command_delay		0
+// --- GOTV (live, faible drift) ---
+tv_enable 1                               // Active le serveur GOTV
+tv_dispatchmode 0                         // Mode d’envoi standard
+tv_allow_static_shots 1                   // Autorise les caméras statiques automatiques
+tv_autorecord 1                           // Enregistrements .dem automatiques
+tv_delaymapchange 1                       // GOTV suit les changements de map
+tv_delay 0                                // 0 = live LAN (mettre 105 s si diffusion publique)
+sv_deltaticks_enforce 0                   // Réduit les kicks spec liés au drift de ticks
+tv_name "GGLan GOTV"                      // Nom du flux GOTV
 
-// Overtime configuration
-mp_overtime_enable			1
+// --- Pauses / warmup (OT géré par eBot : aucune cvar d’OT ici) ---
+sv_matchpause_auto_5v5 1                  // Auto-pause si une équipe < 5 joueurs
+mp_warmup_pausetimer 1                    // Le timer de warmup se met en pause si personne
+mp_warmuptime 60                          // 60 s de warmup
+mp_halftime_pausematch 0                  // Pas de pause auto à la mi-temps (eBot gère le flow)
+mp_competitive_endofmatch_extra_time 155  // Durée du récap/fin de match (~2 min 35)
+mp_warmuptime_all_players_connected 0     // Ne stoppe pas auto le warmup quand 10/10
+mp_round_restart_delay 5                  // 5 s entre les rounds
 
-// each team gets 3 x 30s timeouts per game
-mp_team_timeout_time		31
-mp_team_timeout_max			3
-// heading into overtime each team will have 1 timeout remaining
-mp_team_timeout_ot_add_once 1
-mp_team_timeout_ot_add_each 1
-mp_team_timeout_ot_max		1
-		
-mp_promoted_item_enabled			0
+// --- Timeouts tactiques (règlement standard) ---
+mp_team_timeout_time 30                   // 30 s par timeout tactique
+mp_team_timeout_max 4                     // 4 timeouts par équipe et par map
+mp_technical_timeout_per_team 1           // 1 pause technique par équipe (si plugin/eBot)
+mp_technical_timeout_duration_s 120       // 120 s max pour une pause technique
 
+// --- Timeouts en Overtime (au cas où eBot ne gère pas les crédits) ---
+mp_team_timeout_ot_add_once 1             // +1 timeout à l’entrée en OT
+mp_team_timeout_ot_add_each 1             // +1 timeout à chaque nouvel OT
+mp_team_timeout_ot_max 1                  // Au plus 1 timeout ajouté par OT
 
+// --- Économie / dégâts ---
+cash_team_bonus_shorthanded 0             // Pas de bonus d’argent en sous-nombre
+sv_damage_print_enable 2                  // Affiche les dégâts en fin de round uniquement
 
-//TV
-tv_enable                                              1
-tv_dispatchmode                                        0
+// --- Spectateurs / comms / votes ---
+mp_spectators_max 10                      // Limite des spectateurs
+sv_spec_hear 4                            // Les spectateurs entendent tout (incl. teams)
+tv_relayradio 0                           // Pas de messages radio dans le flux GOTV
 
+sv_allow_votes 1                          // Active le système de votes
+sv_vote_issue_loadbackup_spec_authoritative 1 // Restauration backup via spec/admin uniquement
+sv_vote_creation_timer 25                 // Délai min entre deux créations de vote
+sv_vote_failure_timer 25                  // Cooldown après un vote échoué
 
-sv_steamauth_enforce                                   
+// --- Qualité de vie / logs ---
+sv_reliableavatardata 0                   // Ne force pas la récupération fiable des avatars
+sv_invites_only_mainmenu 0                // Les invitations ne sont pas limitées au menu principal
+sv_gameinstructor_enable 0                // Désactive l’instructeur en jeu
+mp_logdetail 1                            // Logs peu verbeux (monter si besoin de debug)
 
-mp_autokick                                            0
-sv_matchend_drops_enabled 0
-
-//IF we want to go pro one day, google this
-sv_reliableavatardata								   0
-sv_invites_only_mainmenu                               0
-//sv_load_forced_client_names_file
-
-mp_spectators_max                                      10
-sv_matchpause_auto_5v5                                 1
-sv_clockcorrection_msecs                               0
-mp_overtime_limit                                      0
-mp_warmup_pausetimer                                   1
-mp_warmuptime                                          60
-
-mp_halftime_pausematch 									0
-mp_competitive_endofmatch_extra_time                   155
-
-mp_warmuptime_all_players_connected                    0
-sv_spec_hear                                           4
-tv_relayradio                                          0
-
-
-//A VERIFIER 
-sv_vote_issue_loadbackup_spec_authoritative            1
-
-
-sv_vote_creation_timer                                 25
-sv_vote_failure_timer                                  25
-
-
-
-cash_team_bonus_shorthanded                            0
-
-game_mode                                              1
-game_type                                              0
-mp_logdetail                                           3
-mp_logdetail_items                                     1
-mp_logmoney                                            2
-sv_gameinstructor_disable                              1
-
-//SET BY ME
-sv_maxrate 0
-
-sv_pausable 						1
-sv_pure_kick_clients 1
-sv_pure_trace 0
-sv_steamgroup_exclusive 0
-
-sv_voiceenable 1
-tv_allow_static_shots 1
-tv_autorecord 1
-tv_delaymapchange 1
+// -----------------------------------------------------------------------------
+// 2) Sécurité backup & défauts offline de chargeout
+// -----------------------------------------------------------------------------
+mp_backup_round_auto 1                    // Sauvegarde automatique des rounds (autobackups)
+mp_ct_default_secondary "weapon_usp_silencer" // USP-S par défaut côté CT (utile offline)
