Update gglan.cfg with new settings
Correction recv

--- a/gglan.cfg
+++ b/gglan.cfg
@@ -1,4 +1,6 @@
 // ===== GGLan — CS2 LAN soft preset (final) =====
+sv_hibernate_when_empty 0                 // Enlève le problème de recv (sinon retirer tv_enable 1)
+
 
 // -----------------------------------------------------------------------------
 // 0) Base "Premier" (rulebook Valve) + cadence LAN
